--- a/assets/src/css/sass/base/_forms.scss
+++ b/assets/src/css/sass/base/_forms.scss
@@ -139,6 +139,7 @@ input:-ms-input-placeholder {
 
   span.wpcf7-list-item {
     margin: 0;
+    display: block;
   }
 
   span.wpcf7-not-valid-tip {
